# WaveCap-SDR

./: .gitignore  AGENTS.md  ANTENNA_IMPLEMENTATION.md  C4FM_COMPARISON.md  C4FM_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEBUG-JOURNAL.md  JOURNAL.md  P25-TODOs.md  P25_NID_BCH_COMPARISON.md  P25_SYNC_ANALYSIS.md  README.md  Radio-P25-analysis.md  SPEC.md  TODO.md  com.wavecapsdr.server.plist  debugging-p25.md  monitor_radios.sh  restart-sdrplay.sh  start-app.ps1  start-app.sh
backend/: CLAUDE.md  antenna_sweep_results.csv  benchmark_dsp.py  pyproject.toml  test_baseband_decode.py  test_control_channel_monitor.py  test_native_imbe.py  test_sdrtrunk_baseband.py  test_sdrtrunk_control.py  test_sdrtrunk_tsbk.py
backend/artifacts/: traffic_voice_tests.mmd
backend/config/: SA_GRN_README.md  SA_GRN_WORKING_CONFIG.md  frequency_bands.yaml  wavecapsdr.yaml  wavecapsdr.yaml.bak
backend/config/presets/: kexp.yaml  sa_grn.yaml  seattle_aircraft.yaml
backend/config/recipes/: amateur_2m.yaml  amateur_70cm.yaml  brandmeister_dmr.yaml  dmr_uhf.yaml  dmr_vhf.yaml  fire_ems_paging.yaml  flex_paging.yaml  fm_radio_station.yaml  gmrs_frs.yaml  hospital_paging.yaml  ism_433.yaml  ism_915.yaml  noaa_weather.yaml  p25_800mhz.yaml  p25_uhf.yaml  p25_vhf.yaml  sa_grn_p25.yaml  sa_grn_pocsag.yaml  us_pocsag_uhf.yaml  us_pocsag_vhf.yaml  vhf_aircraft.yaml  vhf_marine.yaml  wa_state_patrol_p25.yaml
backend/config/systems/: sa_grn.yaml
backend/config/talkgroups/: sa_grn.yaml
backend/scripts/: analyze_if_spectrum.py  antenna_sweep.py  antenna_sweep_simple.py  antenna_sweep_v2.py  capture_iq.py  capture_iq_soapy.py  capture_voice_basebands.py  capture_voice_test.py  compare_baseband.py  compare_c4fm_demods.py  compare_p25_pipelines.py  debug_bch.py  debug_buffer_values.py  debug_c4fm_comparison.py  debug_c4fm_demod.py  debug_c4fm_position4.py  debug_chunked.py  debug_correct_positions.py  debug_demod_pipeline.py  debug_dibit_comparison.py  debug_equalizer_trace.py  debug_filter_phase.py  debug_fix_verification.py  debug_fixed_equalizer.py  debug_iq_pipeline.py  debug_iq_swap.py  debug_nid_after_fix.py  debug_nid_extraction.py  debug_nid_from_c4fm.py  debug_nid_trace.py  debug_phase_trace.py  debug_polarity_test.py  debug_position4.py  debug_raw_demod.py  debug_resample_manual.py  debug_symbol_indices.py  debug_sync_detailed.py  debug_sync_exact.py  debug_sync_loop.py  debug_sync_positions.py  (+38 more)
backend/stubs/SoapySDR/: __init__.pyi
backend/stubs/numba/: __init__.pyi
backend/stubs/rtlsdr/: __init__.pyi
backend/tests/: conftest.py  test_audio_quality.py  test_captures_channels.py  test_concurrent_operations.py  test_config_overlay.py  test_config_reload.py  test_cqpsk_sample.py  test_decoder_state_machine.py  test_dibit_dump.py  test_flex_decoder.py  test_identifier_resolution.py  test_lrrp.py  test_message_spec.py  test_p25_bch.py  test_p25_dsp.py  test_p25_message_assertions.py  test_p25_tsbk_encoders.py  test_packing_utils.py  test_radioreference.py  test_reference_fec.py  test_sample_analysis.py  test_sdrtrunk_patterns.py  test_soapy_readback.py  test_traffic_voice_encoding.py  test_trunking.py  test_trunking_api.py  test_trunking_encoders.py  test_trunking_voice_api.py  test_tsbk_chain.py  test_tsbk_decoder_roundtrip.py  test_tsbk_decoding.py  test_tsbk_validation.py  test_voice_channel.py
backend/tests/integration/: __init__.py  test_sdr_hardware.py
backend/tests/unit/: __init__.py  test_capture_dsp_timeout.py  test_dsp_core.py  test_fft_backends.py  test_fm_demod.py  test_frequency_namer.py  test_log_levels.py  test_pack_functions.py  test_sdrplay_lock.py  test_sdrplay_proxy_stream.py  test_soapy_sdrplay_detection.py  test_trunking_worker_config.py  test_trunking_worker_grouping.py  test_trunking_worker_liveness.py  test_validation.py
backend/wavecapsdr/: __init__.py  __main__.py  api.py  app.py  capture.py  channel_classifier.py  cli.py  config.py  device_namer.py  encoders.py  error_tracker.py  frequency_namer.py  harness.py  log_streamer.py  mcp_server.py  message_spec.py  models.py  radioreference.py  scanner.py  sdrplay_recovery.py  state.py  state_broadcaster.py  system_metrics.py  typing.py  uhubctl.py  validation.py
backend/wavecapsdr/decoders/: __init__.py  ambe.py  dmr.py  imbe.py  imbe_native.py  imbe_threaded.py  lrrp.py  mbelib_neo.py  nac_tracker.py  p25.py  p25_framer.py  p25_frames.py  p25_frames.py.bak  p25_phase2.py  p25_tsbk.py  p25_tsbk_encoders.py  traffic_voice.py  trunking.py  tsbk_utils.py  voice.py
backend/wavecapsdr/devices/: base.py  composite.py  fake.py  rtl.py  sdrplay_lock.py  sdrplay_proxy.py  sdrplay_worker.py  soapy.py
backend/wavecapsdr/dsp/: agc.py  am.py  channelizer.py  filters.py  flex.py  fm.py  pocsag.py  rds.py  sam.py
backend/wavecapsdr/encoders/: __init__.py
backend/wavecapsdr/static/: index.html  player.html
backend/wavecapsdr/trunking/: __init__.py  api.py  cc_scanner.py  config.py  control_channel.py  event_tracker.py  (+10 more)
(+355 files in other folders)
