[tool.poetry]
name = "wavecapsdr"
version = "0.1.0"
description = "WaveCap-SDR server: SDR device control, capture, streaming, and demodulation."
authors = ["WaveCap Contributors <devnull@example.com>"]
readme = "../README.md"
packages = [{ include = "wavecapsdr", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
psutil = "^5.9.0"
PyYAML = "^6.0.1"
numpy = "^1.26.0"
scipy = "^1.11.0"
numba = "^0.60.0"
anyio = "^4.0.0"
httpx = "^0.27.0"
websockets = "^12.0"
slowapi = "^0.1.9"

# Optional runtime dependency for real hardware access
SoapySDR = { version = "^0.8.3", optional = true }

[tool.poetry.extras]
soapy = ["SoapySDR"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
mypy = "^1.10.0"
ruff = "^0.6.0"
types-PyYAML = "^6.0.12.20240917"

[tool.poetry.scripts]
wavecapsdr = "wavecapsdr.__main__:main"
wavecapsdr-harness = "wavecapsdr.harness:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
plugins = []
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "SoapySDR"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psutil", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlx", "mlx.*", "mlx.core", "pyfftw", "pyfftw.*", "cupy", "cupy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort - import sorting
    "UP",        # pyupgrade - modern Python syntax
    "B",         # flake8-bugbear - common bugs
    "SIM",       # flake8-simplify - simplifiable code
    "RUF",       # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long - let formatter handle
    "B008",   # function-call-in-default-argument - FastAPI Depends() pattern
    "E402",   # module-import-not-at-top - sometimes needed for circular imports
    "SIM102", # collapsible-if - readability preference
    "SIM105", # suppressible-exception - explicit try/except is clearer
    "SIM108", # if-else-block-instead-of-if-exp - readability preference
    "SIM117", # multiple-with-statements - nested with is sometimes clearer
    "B904",   # raise-without-from - not always needed
    "B007",   # unused-loop-control-variable - often intentional
    "B023",   # function-uses-loop-variable - common in async callbacks
    "RUF006", # asyncio-dangling-task - fire-and-forget tasks are intentional
    "RUF012", # mutable-class-default - dataclasses handle this
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "hardware: tests that require real SDR hardware to be connected",
    "anyio: mark test as async using anyio",
    "perf: performance-sensitive checks (opt-in via RUN_PERF_TESTS)",
]
addopts = "-v --tb=short -k 'not trio'"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
